Bug 67730 - Other: Color Setting Preview Mismatched
Summary: Other: Color Setting Preview Mismatched
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0 target:4.1.3
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-04 05:49 UTC by steve.newburg
Modified: 2013-09-17 19:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description steve.newburg 2013-08-04 05:49:21 UTC
Problem description: 
1. Initially, the Preview colors on Smart Tags & Shadows are swapped.

2. Changing any individual Color setting from Automatic to any color works; changing that individual color setting back to Automatic, turns the Preview a blue color.

3. Oracle Report Builder Color settings cannot be changed at all.    
 

Steps to reproduce:
1. Libreoffice Opening Screen
2. Tools....Options...LibreOffice...Appearance....Custom colors


Current behavior:
Preview colors on Smart Tags & Shadows don't consistently match.

Expected behavior: Preview colors should match Color setting.

              
Operating System: Windows 7
Version: 4.1.0.4 release
Comment 1 Jean-Baptiste Faure 2013-09-14 08:04:48 UTC
Indeed. Reproducible with LO 4.1.3.0.0+ and master.
Works as expected in LO 4.0.5

Seems to be a problem in the conversion of this dialog to .ui

Hi Caolan, do you confirm?

Best regards. JBF
Comment 2 Commit Notification 2013-09-16 11:26:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=342b1895d768dc633c3067df6618cd3567b72a6d

Resolves: fdo#67730 Preview colors on Smart Tags & Shadows are swapped



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-09-16 11:57:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2fc3ae88dafd13215019532845db76d726f151d

Related: fdo#67730 automatic turns the preview a blue color



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-09-16 12:49:19 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6e9bb17675200e12777ed23d0c685fbd2bb4c59

Related: fdo#67730 label overlaps listbox and steals its click



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-09-16 14:11:04 UTC
fixed in master, proposed on gerrit for 4-1
Comment 6 Commit Notification 2013-09-17 07:27:26 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ed5fd9e6726d435b798ae27005887a9dcb52188&h=libreoffice-4-1

Resolves: fdo#67730 Preview colors on Smart Tags & Shadows are swapped


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jean-Baptiste Faure 2013-09-17 07:50:50 UTC
Tested in LO 4.1.3.0.0+ (Build ID: 8af5a2b08dd8fa319ae02d9947f0906ecb1a480) under Ubuntu 13.04 and it works as expected. 
Build of master in progress. :-)

Caolan: thank you very for the quick fix !

Best regards. JBF
Comment 8 retired 2013-09-17 08:34:33 UTC
Setting to verified as of comment #7.
Comment 9 Jean-Baptiste Faure 2013-09-17 19:05:32 UTC
Verified on the master too (Build ID: b855e1ee655cbe3a359203c361326c25439e3cb5)

Best regards. JBF