Resolves: fdo#67730 Preview colors on Smart Tags & Shadows are swapped

Change-Id: I63916283c67b9acd79df96a48485dba6b25cf8cb
(cherry picked from commit 342b1895d768dc633c3067df6618cd3567b72a6d)

Related: fdo#67730 automatic turns the preview a blue color

Change-Id: I31c9129472ab64bfda283bb766fad949acb96754
(cherry picked from commit e2fc3ae88dafd13215019532845db76d726f151d)

Related: fdo#67730 label overlaps listbox and steals its click

Change-Id: I9b803bb966916210495025e3811732224585c213
(cherry picked from commit d6e9bb17675200e12777ed23d0c685fbd2bb4c59)
Reviewed-on: https://gerrit.libreoffice.org/5955
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>